[tool.poetry]
name = "pdf-renamer"
version = "0.1.0"
description = ""
authors = ["aasifRIS <aasif.j@rudhrainfosolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
